--- a/push-pull.html
+++ b/push-pull.html
@@ -31,28 +31,56 @@
       </div>
     </div>
     <div class="row" style="padding: 10px;">
-      <div class="col-md-4">
+      <div class="col-xs-4" style="height: 700px;overflow: auto;">
         <h2>Lifetimes</h2>
         <p>Time between the creation and close of the pull request/issue.</p>
-        <p><canvas id="lifespan" width="400" height="400"></canvas></p>
+        <p><canvas id="lifespan" width="400" height="300" style="width:100%"></canvas></p>
         <table id="lifespan_list" class="table table-striped"></table>
       </div>
-      <div class="col-md-4">
+      <div class="col-xs-4" style="height: 700px;overflow: auto;">
         <h2>Created By</h2>
         <p>Pull requests/issue by creation user</p>
-        <p><canvas id="created" width="400" height="400"></canvas></p>
+        <p><canvas id="created" width="400" height="400" style="width:100%"></canvas></p>
         <table id="created_list" class="table table-striped"></table>
       </div>
-      <div class="col-md-4">
+      <div class="col-xs-4" style="height: 700px;overflow: auto;">
         <h2>Assigned To</h2>
         <p>Pull requests/issue by assigned user</p>
-        <p><canvas id="assigned" width="400" height="400"></canvas></p>
+        <p><canvas id="assigned" width="400" height="400" style="width:100%"></canvas></p>
         <table id="assigned_list" class="table table-striped"></table>
+      </div>
+    </div>
+    <div class="row" style="text-align:center">
+      <div class="form-inline bg-info">
+        <button id="get_details" class="btn btn-primary">Fetch Details</button>
+      </div>
+    </div>
+    <div class="row" style="padding: 10px;">
+      <div class="col-xs-3">
+        <h3>Lifetime versus comments</h3>
+        <p>Lifetime versus comments</p>
+        <p><canvas id="lifetime_comments" width="300" height="300" style="width:100%"></canvas></p>
+      </div>
+      <div class="col-xs-3">
+        <h3>Lifetime versus commits</h3>
+        <p>Lifetime versus number of commits</p>
+        <p><canvas id="lifetime_commits" width="300" height="300" style="width:100%"></canvas></p>
+      </div>
+      <div class="col-xs-3">
+        <h3>Lifetime versus changes</h3>
+        <p>Lifetime versus magnitude of changes</p>
+        <p><canvas id="lifetime_changes" width="300" height="300" style="width:100%"></canvas></p>
+      </div>
+      <div class="col-xs-3">
+        <h3>Lifetime versus number</h3>
+        <p>Lifetime versus github # number</p>
+        <p><canvas id="lifetime_number" width="300" height="300" style="width:100%"></canvas></p>
       </div>
     </div>
     <script src="jquery-2.0.3.js"></script>
     <script src="pie_chart.js"></script>
     <script src="histogram.js"></script>
+    <script src="graph.js"></script>
     <script src="push-pull.js"></script>
   </body>
 </html>
