--- a/push-pull.html
+++ b/push-pull.html
@@ -6,77 +6,86 @@
     <title>Push-pull</title>
   </head>
   <body>
-    <div class="row" style="text-align:center">
-      <div class="form-inline bg-info">
-        <div class="form-group">
-          <label class="sr-only" for="username">Github Username</label>
-          <input type="text" class="form-control" id="username" placeholder="username">
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="repository">Github Repository</label>
-          <div class="input-group">
-            <div class="input-group-addon">/</div>
-            <input type="text" class="form-control" id="repository" placeholder="repository">
+    <div id="controls" class="panel panel-primary" style="position:fixed; z-index:2; display: block; left: 100px; top: 50%; left: 50%; transform: translate(-50%, -50%); -webkit-transform: translate(-50%, -50%);">
+      <div class="panel-heading clearfix">
+        <h3 class="pull-left" style="margin-top:0;">Select Repository</h3>
+        <div class="pull-right"><button id="hide_controls" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-remove"></span></button></div>
+      </div>
+      <div class="panel-body">
+        <div class="form">
+          <label>Github Username/repository</label>
+          <div class="form-group form-inline">
+            <label class="sr-only" for="username">Github Username</label>
+            <input type="text" class="form-control" id="username" placeholder="username">
+            <label class="sr-only" for="repository">Github Repository</label>
+            <div class="input-group">
+              <div class="input-group-addon">/</div>
+              <input type="text" class="form-control" id="repository" placeholder="repository">
+            </div>
+          <button id="get_pulls" class="btn btn-primary">Fetch Pulls</button>
+          <button id="get_issues" class="btn btn-primary">Fetch Issues</button>
+          </div>
+          <div class="form-group form-inline">
+            <label class="sr-only" for="token">Github Token</label>
+            <input type="text" class="form-control" id="token" placeholder="token">
+            <button id="set_token" class="btn btn-primary">Set Token</button>
           </div>
         </div>
-        <button id="get_pulls" class="btn btn-primary">Fetch Pulls</button>
-        <button id="get_issues" class="btn btn-primary">Fetch Issues</button>
-        <div class="form-group">
-          <label class="sr-only" for="token">Github Token</label>
-          <input type="text" class="form-control" id="token" placeholder="token">
-        </div>
-        <button id="set_token" class="btn btn-primary">Set Token</button>
-        <label class="sr-only" id="select_label">No selection</label>
-        <button id="reset_selection" class="btn btn-primary">Reset</button>
       </div>
     </div>
-    <div class="row" style="padding: 10px;">
-      <div class="col-xs-4" style="height: 700px;overflow: auto;">
-        <h2>Lifetimes</h2>
+    <div class="row" style="padding: 5px;">
+      <div class="col-md-4" style="height: 500px;overflow: auto;">
+        <h2 style="margin-top:0;">Lifetimes</h2>
         <p>Time between the creation and close of the pull request/issue.</p>
-        <p><canvas id="lifespan" width="400" height="300" style="width:100%"></canvas></p>
+        <p style="text-align:center"><canvas id="lifespan" width="300" height="300"></canvas></p>
         <table id="lifespan_list" class="table table-striped"></table>
       </div>
-      <div class="col-xs-4" style="height: 700px;overflow: auto;">
-        <h2>Created By</h2>
+      <div class="col-md-4" style="height: 500px;overflow: auto;">
+        <h2 style="margin-top:0;">Created By</h2>
         <p>Pull requests/issue by creation user</p>
-        <p><canvas id="created" width="400" height="400" style="width:100%"></canvas></p>
+        <p style="text-align:center"><canvas id="created" width="300" height="300"></canvas></p>
         <table id="created_list" class="table table-striped"></table>
       </div>
-      <div class="col-xs-4" style="height: 700px;overflow: auto;">
-        <h2>Assigned To</h2>
+      <div class="col-md-4" style="height: 500px;overflow: auto;">
+        <h2 style="margin-top:0;">Assigned To</h2>
         <p>Pull requests/issue by assigned user</p>
-        <p><canvas id="assigned" width="400" height="400" style="width:100%"></canvas></p>
+        <p style="text-align:center"><canvas id="assigned" width="300" height="300"></canvas></p>
         <table id="assigned_list" class="table table-striped"></table>
       </div>
     </div>
-    <div class="row" style="text-align:center">
-      <div class="form-inline bg-info">
-        <button id="get_details" class="btn btn-primary">Fetch Details</button>
-      </div>
-    </div>
     <div class="row" style="padding: 10px;">
-      <div class="col-xs-3">
-        <h3>Lifetime versus comments</h3>
+      <div class="col-sm-3">
+        <h4>Lifetime versus comments</h4>
         <p>Lifetime versus comments</p>
-        <p><canvas id="lifetime_comments" width="300" height="300" style="width:100%"></canvas></p>
+        <p><canvas id="lifetime_comments" width="200" height="200"></canvas></p>
       </div>
-      <div class="col-xs-3">
-        <h3>Lifetime versus commits</h3>
+      <div class="col-sm-3">
+        <h4>Lifetime versus commits</h4>
         <p>Lifetime versus number of commits</p>
-        <p><canvas id="lifetime_commits" width="300" height="300" style="width:100%"></canvas></p>
+        <p><canvas id="lifetime_commits" width="200" height="200"></canvas></p>
       </div>
-      <div class="col-xs-3">
-        <h3>Lifetime versus changes</h3>
+      <div class="col-sm-3">
+        <h4>Lifetime versus changes</h4>
         <p>Lifetime versus magnitude of changes</p>
-        <p><canvas id="lifetime_changes" width="300" height="300" style="width:100%"></canvas></p>
+        <p><canvas id="lifetime_changes" width="200" height="200"></canvas></p>
       </div>
-      <div class="col-xs-3">
-        <h3>Lifetime versus number</h3>
+      <div class="col-sm-3">
+        <h4>Lifetime versus number</h4>
         <p>Lifetime versus github # number</p>
-        <p><canvas id="lifetime_number" width="300" height="300" style="width:100%"></canvas></p>
+        <p><canvas id="lifetime_number" width="200" height="200"></canvas></p>
       </div>
     </div>
+
+    <nav class="navbar navbar-default" style="position: fixed; right:0; top:50%">
+      <ul class="nav">
+        <li><button id="show_controls" class="btn btn-default" title="Show Menu"><span class="glyphicon glyphicon-th-large"></span></button></li>
+        <li><button id="reset_selection" class="btn btn-default" title="Reset"><span class="glyphicon glyphicon-repeat"></span></button></li>
+        <li><button id="help" class="btn btn-default" title="Help?"><span class="glyphicon glyphicon-question-sign"></span></button></li>
+      </ul>
+    </nav>
+
+    <a href="https://github.com/pgjones/push-pull"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+
     <script src="jquery-2.0.3.js"></script>
     <script src="pie_chart.js"></script>
     <script src="histogram.js"></script>
