--- a/push-pull.html
+++ b/push-pull.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <title>Push-pull</title>
   </head>
   <body>
-    <div id="controls" class="panel panel-primary" style="position:fixed; z-index:2; display: block; left: 100px; top: 50%; left: 50%; transform: translate(-50%, -50%); -webkit-transform: translate(-50%, -50%);">
+    <div id="controls" class="panel panel-primary" style="position:fixed; z-index: 1; display: block; margin: auto;">
       <div class="panel-heading clearfix">
         <h3 class="pull-left" style="margin-top:0;">Select Repository</h3>
-        <div class="pull-right"><button id="hide_controls" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-remove"></span></button></div>
+        <div class="pull-right"><button id="hide_controls" type="button" class="close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button></div>
       </div>
       <div class="panel-body">
         <div class="form">
@@ -25,6 +25,7 @@
           <button id="get_pulls" class="btn btn-primary">Fetch Pulls</button>
           <button id="get_issues" class="btn btn-primary">Fetch Issues</button>
           </div>
+          <label>Github Token</label>
           <div class="form-group form-inline">
             <label class="sr-only" for="token">Github Token</label>
             <input type="text" class="form-control" id="token" placeholder="token">
@@ -75,6 +76,40 @@
         <p><canvas id="lifetime_number" width="200" height="200"></canvas></p>
       </div>
     </div>
+    <div class="row" style="padding: 10px;">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <a name="help"></a>
+        <h1>Help! <small>How to visualise pull request and issue statistics for <a href="https://github.com">github</a></small></h1>
+        <p>This webpage can retrieve pull request or issue statistics for github repositories using the github api. 
+          To view some statistics click, <button class="btn btn-default" title="Show Menu"><span class="glyphicon glyphicon-th-large"></span></button>, on the right and then enter the repository details in the pop-up menu. 
+          Then click <button class="btn btn-primary">Fetch Pulls</button> or <button class="btn btn-primary">Fetch Issues</button> to fetch pull request or issue statistics from gitub.
+          Private github repositories will require authentication for access, via a github token, as explained on github <a href="https://github.com/blog/1509-personal-api-tokens">here</a>.
+          After entering the token be sure to click <button class="btn btn-primary">Set Token</button> for it to be applied.
+        </p>
+        <p>Clicking on the histogram will select only the pull requests/issues with the lifespan selected, whereas clicking the pie charts will select pull requests/issues created by or assigned to a specific user (this can also be acheived by selecting the lifespan/user in the table below).
+          Selection can be reset by clicking <button class="btn btn-default" title="Reset"><span class="glyphicon glyphicon-repeat"></span></button>.
+          Clicking a linear-x plot will create a log-x plot and vice versa.
+        </p>
+        <p>This webpage makes us of the <a href="https://developer.github.com/v3/">github api</a> which limits the number of requests a user can make.
+          As 1.01 requests are required for each pull request/issue an unauthenticated user can view the statistics of no more than 59 pull requests/issues by default whereas a authenticated user can view the statistics of 5940.
+        </p>
+        <h3>Details</h3>
+        <p>The <code>lifespan</code> of a pull request/issue is calculated as for a github api <code>object</code>,
+          <pre>
+var created = new Date(object.created_at);
+var closed = new Date(object.closed_at);
+var lifspan = closed - created;</pre>
+        </p>
+        <p>The user creating the pull request/issue is given by the <code>object.user</code> field, and the user assigned is given by the <code>object.assignee</code> field.
+        </p>
+        <h4>Aside</h4>
+        <p>I thought I'd find correlations between lifespan and users, comments, commits, change-size and github (#) number.
+          I have only really found a slight correlation between lifespan and change-size on the repository I work on, additionally the median pull request lifespan is 1 week unless it is a pull request I created in which case it is a month :(.
+        </p>
+      </div>
+      <div class="col-md-1"></div>
+    </div>
 
     <nav class="navbar navbar-default" style="position: fixed; right:0; top:50%">
       <ul class="nav">
@@ -84,9 +119,21 @@
       </ul>
     </nav>
 
+    <div id="error" class="alert alert-danger alert-dismissible" role="alert" style="position:fixed; z-index:2; display: block;">
+      <button id="hide_error" type="button" class="close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <strong>Error!</strong><p id="error_message"></p>
+      <p>You have <span class="requests">X</span> github requests remaining, see <a href="#help" class="alert-link">help</a></p>
+    </div>
+
+    <div id="success" class="alert alert-info alert-dismissible" role="alert" style="position:fixed; z-index:2; display: block;">
+      <button id="hide_sucess" type="button" class="close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <strong>Success!</strong>
+      <p>You have <span class="requests">X</span> github requests remaining, see <a href="#help" class="alert-link">help</a></p>
+    </div>
+
     <a href="https://github.com/pgjones/push-pull"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 
-    <script src="jquery-2.0.3.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" ></script>
     <script src="pie_chart.js"></script>
     <script src="histogram.js"></script>
     <script src="graph.js"></script>
