--- a/index.html
+++ b/index.html
@@ -135,9 +135,6 @@ var lifspan = closed - created;</pre>
     <a href="https://github.com/pgjones/push-pull"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" ></script>
-    <script src="pie_chart.js"></script>
-    <script src="histogram.js"></script>
-    <script src="graph.js"></script>
-    <script src="push-pull.js"></script>
+    <script src="push-pull.min.js"></script>
   </body>
 </html>
