--- a/push-pull.html
+++ b/push-pull.html
@@ -134,11 +134,28 @@ var lifspan = closed - created;</pre>
     </div>
 
     <a href="https://github.com/pgjones/push-pull"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+    
+    <div id="loader" style="position: absolute; top: 0; right: 0; z-index:2;">
+      <img src="ajax-loader.gif">
+    </div>
+
+    <div id="large_graph" class="panel panel-primary" style="position:fixed; z-index: 1; display: block; margin: auto;">
+      <div class="panel-heading clearfix">
+        <h3 class="pull-left" style="margin-top:0;"><span id="large_graph_title"></span>
+          <small style="color:white;">Click and drag to zoom, right click to zoom out</small>
+        </h3>
+        <div class="pull-right"><button id="hide_graph" type="button" class="close"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button></div>
+      </div>
+      <div class="panel-body">
+        <p><canvas id="large_graph_canvas" width="200" height="200"></canvas></p>
+      </div>
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" ></script>
     <script src="pie_chart.js"></script>
     <script src="histogram.js"></script>
     <script src="graph.js"></script>
+    <script src="large_graph.js"></script>
     <script src="push-pull.js"></script>
   </body>
 </html>
