--- a/push-pull.html
+++ b/push-pull.html
@@ -109,7 +109,8 @@ var lifspan = closed - created;</pre>
         </p>
         <h4>Aside</h4>
         <p>I thought I'd find correlations between lifespan and users, comments, commits, change-size and github (#) number.
-          I have only really found a slight correlation between lifespan and change-size on the repository I work on, additionally the median pull request lifespan is 1 week unless it is a pull request I created in which case it is a month :(.
+          I have only really found a slight correlation between lifespan and change-size on the repository I work on.
+          Additionally the median pull request lifespan is 1 week unless it is a pull request I created in which case it is a month :(.
         </p>
       </div>
       <div class="col-md-1"></div>
